<resources>
    <string name="app_name">E Way Bill GST: Generate using SMS</string>
    <string name="ebill_mob_no">7738299899</string>
    <string name="ebill_document_link">https://goo.gl/xHUN24</string>

    <string name="select_language">Select Language</string>
    <string name="gujarati">ગુજરાતી</string>
    <string name="hindi">हिन्दी</string>
    <string name="english">English</string>

    <string name="cancel_bill_screen">Cancel Bill Screen</string>
    <string name="gst_ne_bill">E Way Bill GST</string>
    <string name="generate_e_bill">Generate E Way Bill</string>
    <string name="cancel_e_bill">Cancel E Way Bill</string>
    <string name="transportation_type">Transaction type</string>
    <string name="recipient_s_gstin">Buyer GST Number</string>
    <string name="pincode">PIN Code of the Place of Delivery</string>
    <string name="bill_no">Bill Number</string>
    <string name="bill_date">Bill Date</string>
    <string name="select_date">Select date</string>
    <string name="bill_value">Bill Amount</string>
    <string name="hsn_code">HSN Code</string>
    <string name="approx_distance_in_km">Approximate Distance in KMs</string>
    <string name="vehical_no">Transport Vehicle Number</string>
    <string name="submit">Submit</string>
    <string name="bill_suggestion">You must have below details to generate E Way bill using SMS facility:</string>
    <string name="bill_suggestion1">\n1) Bill Copy\n2) Transport vehicle number\n3) Registration of your mobile number in E Way Bill Portal (One time activity)</string>
    <string name="bill_suggestion2">\nIf your mobile number is not register, please inform your GST consultant to register your mobile number (you may register mobile number which has free outgoing SMS) on E way bill portal. You may share below document to GST consultant for registration.</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="e_way_bill_no">E Way Bill Number</string>
    <string name="download_e_way_bill">Download E Way Bill</string>
    <string name="bill_download_link">https://ewaybillgst.gov.in/Others/EBPrintnew.aspx</string>
    <string name="cancel_bill_popup">Are you sure want to cancel the bill?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submitted_successfully">Submitted successfully.</string>
    <string name="app_created_by">Conceptualized by :\n\nCA Pradip Patel\nDISA, ERP Certified\nWhatsApp No : 82003 82474\neservices247@gmail.com</string>


    <string-array name="transportation">
        <item>Outward Supply (Sell)</item>
        <item>Outward Export</item>
        <item>Outward Job Work</item>
        <item>Outward SKD/CKD</item>
        <item>Outward Recipient Not Known</item>
        <item>Outward For Own Use</item>
        <item>Outward Exhibitions &amp; Fairs</item>
        <item>Outward Line Sales</item>
        <item>Outward Others</item>
        <item>Inward Supply</item>
        <item>Inward Import</item>
        <item>Inward SKD/CKD</item>
        <item>Inward Job Work Returns</item>
        <item>Inward Sales Returns</item>
        <item>Inward Exhibitions &amp; Fairs</item>
        <item>Inward Others</item>
    </string-array>

    <string-array name="transportationCode">
        <item>OSUP</item>
        <item>OEXP</item>
        <item>OJOB</item>
        <item>OSCD</item>
        <item>ORNK</item>
        <item>OFOU</item>
        <item>OEOF</item>
        <item>OLNS</item>
        <item>OOTH</item>
        <item>ISUP</item>
        <item>IIMP</item>
        <item>ISCD</item>
        <item>IJWR</item>
        <item>ISLR</item>
        <item>IEOF</item>
        <item>IOTH</item>
    </string-array>

</resources>
