<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="ebill.com.SelectLanguageActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="GST\nE-bill"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/select_language"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp">

        <RadioButton
            android:id="@+id/radioGuj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gujarati"
            android:textSize="21sp" />

        <RadioButton
            android:id="@+id/radioEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/english"
            android:textSize="21sp" />
    </RadioGroup>
</LinearLayout>
