<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ebill.com.DashboardActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/gst_ne_bill"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:background="#459c40"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="onGenerateClicked"
        android:padding="8dp"
        android:text="@string/generate_e_bill"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/heading"
        android:layout_marginRight="60dp"
        android:layout_marginTop="24dp"
        android:background="#de6060"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="onCancelBillClicked"
        android:padding="8dp"
        android:text="@string/cancel_e_bill"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

</RelativeLayout>
